--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -24,6 +24,7 @@ regex==2023.12.25
 requests==2.32.3
 segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@dca509fe793f601edb92606367a655c15ac00fdf
 six==1.17.0
+scipy==1.15.2
 sympy==1.12
 torch==2.2.2
 torchvision==0.17.2
