--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -7,6 +7,8 @@ filelock==3.18.0
 fonttools==4.57.0
 fsspec==2025.3.2
 ftfy==6.3.1
+flask
+google-generativeai
 idna==3.4
 Jinja2==3.1.6
 kiwisolver==1.4.8
