--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
 ml/*.npy filter=lfs diff=lfs merge=lfs -text
 ml/*.pth filter=lfs diff=lfs merge=lfs -text
